tests/struct/syntax_err3.rz
struct Foo {
    fn init(} // error: function paramters must be identifiers

}
